# FileManager

./: CMakeLists.txt  FileManager.pro  README.md  build_file.pro
icons/: icons_pack.h
res/: icons.qrc
src/app/: main.cpp  ui.cpp  ui.h
src/boxes/: add_file.cpp  add_file.h  add_folder.cpp  add_folder.h  add_item.cpp  create_dialog.cpp  create_dialog.h  message.cpp  message.h  search.cpp  search.h  text_editor.cpp  text_editor.h  tips.cpp  tips.h
src/customes/: button.cpp  button.h  text.cpp  text.h
src/funcs/: buffer.cpp  buffer.h  clipboard.cpp  clipboard.h  copy.cpp  copy.h  manager.cpp  manager.h  paste.cpp  paste.h  remove.cpp  remove.h  transitions.cpp  transitions.h
src/includes/: include.h
styles/: button.css  button_cancel.css  button_ok.css  manager.css  text_edit.css  text_label.css  tips.css  widget.css  window.css
